[tool.poetry]
name = "youtubetimestampredditbot"
version = "0.1.0"
description = ""
authors = ["Conor Sheehan <conor.sheehan.dev@gmail.com>"]
license = "GPL3"

[tool.poetry.dependencies]
python = "^3.6.2"
praw = "^7.4.0"

[tool.poetry.dev-dependencies]
pytest = "^6.2.5"
black = "^21.9b0"
mypy = "^0.910"
bump2version = "^1.0.1"
isort = "^5.9.3"
taskipy = "^1.8.2"
pre-commit = "^2.15.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
