[tool.poetry]
name = "youtubetimestampredditbot"
version = "0.1.0"
description = ""
authors = ["Conor Sheehan <conor.sheehan.dev@gmail.com>"]
license = "GPL3"

[tool.poetry.dependencies]
python = "^3.6.2"
praw = "^7.4.0"
inflect = "^5.3.0"
furl = "^2.1.2"

[tool.poetry.dev-dependencies]
pytest = "^6.2.5"
black = "^21.9b0"
mypy = "^0.910"
bump2version = "^1.0.1"
isort = "^5.9.3"
taskipy = "^1.8.2"
pre-commit = "^2.15.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.taskipy.tasks]
ci_lint = "black --check ."
ci_isort = "isort --check --diff"
isort = 'isort -y'
lint = "black ."
tests = "python -m pytest tests"

[tool.isort]
import_heading_stdlib = "Standard Library"
import_heading_thirdparty = "Third party"
import_heading_firstparty = "YouTubeTimestampRedditBot"
# copied from https://github.com/psf/black/blob/master/docs/compatible_configs.md
multi_line_output = 3
include_trailing_comma = true
force_grid_wrap = 0
use_parentheses = true
line_length = 100
