[tool.poetry]
name = "youtubetimestampredditbot"
version = "0.1.0"
description = ""
authors = ["Conor Sheehan <conor.sheehan.dev@gmail.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.6.2"
praw = "^7.4.0"
furl = "^2.1.2"
regex = "^2021.8.28"
requests = "^2.26.0"
types-requests = "^2.25.8"

[tool.poetry.dev-dependencies]
pytest = "^6.2.5"
black = "^21.9b0"
mypy = "^0.910"
bump2version = "^1.0.1"
isort = "^5.9.3"
taskipy = "^1.8.2"
pre-commit = "^2.15.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.taskipy.tasks]
ci_lint = "black --check ."
ci_isort = "isort --check --diff ."
isort = 'isort .'
lint = "black ."
tests = "python -m pytest tests"
mypy = "mypy --ignore-missing-imports src"
obtain_refresh_token = "python scripts/obtain_refresh_token.py"

[tool.isort]
import_heading_stdlib = "Standard Library"
import_heading_thirdparty = "Third party"
import_heading_firstparty = "YouTubeTimestampRedditBot"
# copied from https://github.com/psf/black/blob/6559bdbd9dcf71ba0017d66bb133c744bd83b0e3/docs/guides/using_black_with_other_tools.md
profile = "black"
